--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -4,10 +4,16 @@
     xmlns:apps="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="scoreViewModelXml"
+            type="ghar.gamec.guessaword.ui.score.ScoreViewModel" />
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".score.ScoreFragment">
+    tools:context=".ui.score.ScoreFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -46,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="@string/play_again"
+        android:onClick="@{()-> scoreViewModelXml.onPlayAgain()}"
         apps:layout_constraintBottom_toBottomOf="parent"
         apps:layout_constraintEnd_toEndOf="parent"
         apps:layout_constraintStart_toStartOf="parent" />
