--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".title.TitleFragment" >
+        tools:context=".ui.title.TitleFragment" >
 
         <TextView
             android:id="@+id/get_ready_text"
