--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/title_destination"
-        android:name="ghar.gamec.guessaword.title.TitleFragment"
+        android:name="ghar.gamec.guessaword.ui.title.TitleFragment"
         android:label="fragment_title"
         tools:layout="@layout/fragment_title" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/game_destination"
-        android:name="ghar.gamec.guessaword.game.GameFragment"
+        android:name="ghar.gamec.guessaword.ui.game.GameFragment"
         android:label="fragment_game"
         tools:layout="@layout/fragment_game" >
         <action
@@ -26,7 +26,7 @@
     </fragment>
     <fragment
         android:id="@+id/score_destination"
-        android:name="ghar.gamec.guessaword.score.ScoreFragment"
+        android:name="ghar.gamec.guessaword.ui.score.ScoreFragment"
         android:label="fragment_score"
         tools:layout="@layout/fragment_score" >
         <action
