--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -20,7 +20,7 @@
 
     <data>
         <variable
-            name="gameViewModelXml"
+            name="gameViewModelView"
             type="ghar.gamec.guessaword.ui.game.GameViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,13 +56,16 @@
             android:textColor="@color/black_text_color"
             android:textSize="34sp"
             android:textStyle="normal"
+            android:text="@{@string/quote_format(gameViewModelView.word)}"
             app:layout_constraintBottom_toTopOf="@+id/score_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/word_is_text"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:text="&quot;Tuna&quot;" />
+            tools:text="&quot;Tuna&quot;"
+
+            />
 
         <TextView
             android:id="@+id/timer_text"
@@ -72,6 +75,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
+            android:text="@{gameViewModelView.currentTimeString}"
             android:textColor="@color/grey_text_color"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -89,6 +93,7 @@
             android:fontFamily="sans-serif"
             android:textColor="@color/grey_text_color"
             android:textSize="14sp"
+            android:text="@{@string/score_format(gameViewModelView.score)}"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/skip"
-            android:onClick="@{()-> gameViewModelXml.onSkip()}"
+            android:onClick="@{()-> gameViewModelView.onSkip()}"
             android:theme="@style/SkipButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/correct_button"
@@ -123,7 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="@string/got_it"
-            android:onClick="@{()-> gameViewModelXml.onCorrect()}"
+            android:onClick="@{()-> gameViewModelView.onCorrect()}"
             android:theme="@style/GoButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
